Add test task in VSCode

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -10,6 +10,16 @@
                 "kind": "build",
                 "isDefault": true
             }
+        },
+        {
+            "label": "swift-test",
+            "type": "shell",
+            "command": "swift",
+            "args": ["test", "-Xswiftc", "\"-target\"", "-Xswiftc", "\"x86_64-apple-macosx10.13\""],
+            "group": {
+                "kind": "test",
+                "isDefault": true
+            }
         }
     ]
 }
