--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,7 +5,7 @@
             "label": "swift-build",
             "type": "shell",
             "command": "swift",
-            "args": ["build", "-Xswiftc", "\"-target\"", "-Xswiftc", "\"x86_64-apple-macosx10.13\""],
+            "args": ["build"],
             "group": {
                 "kind": "build",
                 "isDefault": true
@@ -15,7 +15,7 @@
             "label": "swift-test",
             "type": "shell",
             "command": "swift",
-            "args": ["test", "-Xswiftc", "\"-target\"", "-Xswiftc", "\"x86_64-apple-macosx10.13\""],
+            "args": ["test"],
             "group": {
                 "kind": "test",
                 "isDefault": true
