--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI
 on: [push, pull_request]
 jobs:
   test:
-    runs-on: macOS-latest
+    runs-on: macOS-10.15
     steps:
     - uses: actions/checkout@v1
     - name: Run tests
       env: 
-        DEVELOPER_DIR: /Applications/Xcode_11.app
+        DEVELOPER_DIR: /Applications/Xcode_11.4.app
       run: swift test
