Always display build identifier in lists

--- a/Tests/XcodesKitTests/Fixtures/Stub.version.plist
+++ b/Tests/XcodesKitTests/Fixtures/Stub.version.plist
@@ -3,6 +3,6 @@
 <plist version="1.0">
 <dict>
 	<key>ProductBuildVersion</key>
-	<string>0.0.0</string>
+	<string>ABC123</string>
 </dict>
 </plist>
