Add Unxip tool from saagarjha
Source: https://github.com/saagarjha/unxip

This mirrors this change in Xcodes.app:
https://github.com/RobotsAndPencils/XcodesApp/pull/179

In my tests (M1 Max, 64GB RAM), unxipping is 3x faster than
`/usr/bin/xip`.

--- a/.swiftpm/xcode/xcshareddata/xcschemes/xcodes-Package.xcscheme
+++ b/.swiftpm/xcode/xcshareddata/xcschemes/xcodes-Package.xcscheme
@@ -90,6 +90,34 @@
                ReferencedContainer = "container:">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "xcodes_AppleAPITests"
+               BuildableName = "xcodes_AppleAPITests"
+               BlueprintName = "xcodes_AppleAPITests"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "YES"
+            buildForProfiling = "YES"
+            buildForArchiving = "YES"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "Unxip"
+               BuildableName = "Unxip"
+               BlueprintName = "Unxip"
+               ReferencedContainer = "container:">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
