--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,10 +2,10 @@ name: CI
 on: [push, pull_request]
 jobs:
   test:
-    runs-on: macOS-11
+    runs-on: macos-12
     steps:
     - uses: actions/checkout@v3
     - name: Run tests
       env: 
-        DEVELOPER_DIR: /Applications/Xcode_13.2.1.app
+        DEVELOPER_DIR: /Applications/Xcode_14.0.1.app
       run: swift test
